--- a/.github/workflows/ivd-cloud-backup.yml
+++ b/.github/workflows/ivd-cloud-backup.yml
@@ -36,3 +36,11 @@ jobs:
           REPORT_TZ: "Asia/Shanghai"
         run: |
           python3 scripts/cloud_backup_send.py
+
+      - name: Upload report artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ivd-cloud-backup-report
+          path: reports/*.txt
+          retention-days: 14
