--- a/rules/email_rules/strict.v2.yaml
+++ b/rules/email_rules/strict.v2.yaml
@@ -1,43 +1,46 @@
 ruleset: email_rules
 version: "2.0.0"
 profile: strict.v2
-description: "严格发信规则（需显式启用），提高幂等与可观测性。"
 
-feature_flags:
-  enable_new_email_rules: true
-  enable_explain: true
-  require_sent_mail_guard: true
-
-compatibility:
-  backward_compatible: true
-  fallback_to_legacy_on_error: true
-
-delivery:
-  transport: icloud_smtp
-  date_tz: Asia/Shanghai
+defaults:
+  timezone: Asia/Shanghai
   subject_template: "全球IVD晨报 - {{date}}"
-  from_name: "全球IVD晨报"
-  from_env: SMTP_FROM
-  to_env: TO_EMAIL
-  dedupe_key_template: "{{to}}|{{subject}}|{{date}}"
+  recipient: "${TO_EMAIL:-qq82125@gmail.com}"
+  sender_env: SMTP_FROM
+  send_window:
+    hour: 8
+    minute: 30
+  retry:
+    max_retries: 6
+    connect_timeout_sec: 12
+    max_time_sec: 90
 
-retry:
-  connect_timeout_sec: 10
-  max_time_sec: 90
-  max_retries: 6
-  backoff_initial_sec: 2
-  backoff_max_sec: 90
+overrides:
+  enabled: true
+  on_weekend: same
+  subject_prefix: "[Strict] "
+  dedupe_window_hours: 36
 
-fallback:
-  cloud_backup_enabled: true
-  cloud_backup_check_sent_mail: true
-  cloud_backup_mailbox_env: IMAP_SENT_MAILBOX
-  allow_resend_in_replay: false
+rules:
+  - id: strict-subject
+    enabled: true
+    priority: 100
+    type: subject_template
+    description: 严格模式主题模板
+    params:
+      template: "[Strict] 全球IVD晨报 - {{date}}"
 
-logging:
-  required_fields:
-    - run_id
-    - profile
-    - rules_version
-    - mode
-    - reason_code
+  - id: strict-dedupe
+    enabled: true
+    priority: 90
+    type: dedupe
+    description: 严格去重窗口
+    params:
+      window_hours: 36
+
+output:
+  format: plain_text
+  sections: ["A", "B", "C", "D", "E", "F", "G"]
+  summary_max_chars: 180
+  charts_enabled: true
+  chart_types: ["region_heatmap", "platform_radar"]
