console: make content/qc/output rules fully form-configurable

--- a/rules/content_rules/enhanced.yaml
+++ b/rules/content_rules/enhanced.yaml
@@ -5,6 +5,7 @@ profile: enhanced
 defaults:
   timezone: Asia/Shanghai
   content_sources:
+    min_trust_tier: B
     include_tags:
       - media
       - regulatory
