Adjust scheduler_rules defaults and ignore runtime data dir

--- a/rules/scheduler_rules/enhanced.yaml
+++ b/rules/scheduler_rules/enhanced.yaml
@@ -1,5 +1,5 @@
 ruleset: scheduler_rules
-version: "2.0.0"
+version: "2.0.1"
 profile: enhanced
 
 defaults:
@@ -26,7 +26,7 @@ defaults:
     misfire_grace_seconds: 600
   run_policies:
     allow_manual_trigger: true
-    pause_switch: true
+    pause_switch: false
   artifacts:
     retain_days: 14
 
@@ -37,4 +37,3 @@ rules: []
 
 output:
   format: "none"
-
