--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     ports:
       - "8090:8789"
     volumes:
+      # Dev-friendly: mount source so UI/code changes take effect without rebuilding images.
+      - ./app:/app/app
+      - ./rules:/app/rules
       - ./data:/app/data
       - ./artifacts:/app/artifacts
       - ./logs:/app/logs
@@ -31,6 +34,9 @@ services:
       SCHEDULER_PROFILE: "enhanced"
       SCHEDULER_REFRESH_SECONDS: "60"
     volumes:
+      # Dev-friendly: mount source so scheduler changes take effect without rebuilding images.
+      - ./app:/app/app
+      - ./rules:/app/rules
       - ./data:/app/data
       - ./artifacts:/app/artifacts
       - ./logs:/app/logs
